Improved css outside popup. Fixed grid activities misplacement. Added horizontal scroll to time grid

--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -2,12 +2,16 @@ body {
 	height: 100%;
 }
 
+/* Main colours*/
+$main-blue: #4d90fe;
+$secondary-blue: #3367d6;
+
 /* Button colours */
 $btn-gradient-default-one: #f5f5f5;
 $btn-gradient-default-two: #f1f1f1;
 $btn-gradient-default-three: #f8f8f8;
 
-$btn-gradient-blue-one: #4d90fe;
+$btn-gradient-blue-one: $main-blue;
 $btn-gradient-blue-two: #4787ed;
 $btn-gradient-blue-three: #357ae8;
 
@@ -29,28 +33,63 @@ $activity-colour-lime: #efef1a;
 $activity-colour-light-blue: #1b5a9b;
 
 
+
 /* Main */
 $activity-width: 135px;
 
 #itinerary-container {
 	font-family: Roboto;
 	font-weight: 300;
+	overflow: auto;
+	width: auto;
 }
 
 #scrollable-itinerary-container {
 	max-height: 400px;
 	overflow: auto;
 	clear:both;
+	width: 100%;
 }
 
 #day-controls-container {
-	padding-left: 15px;
+	background-color: $secondary-blue;
+	height: 70px;
+	color: #fff;
+	padding-left: 20px;
+	text-align: center;
+	cursor:default;
+	-webkit-box-shadow: 0 10px 6px -6px #777;
+	-moz-box-shadow: 0 10px 6px -6px #777;
+	box-shadow: 0 10px 6px -6px #777;
 
 	.day-control {
-		width: $activity-width;
 		float:left;
-		margin-left: 5px;
+		padding: 0px 5px 0px 5px;
+		width: $activity-width; /* activity width minus .day-control margin-left */
+
+		&:hover {
+			.open-popup-link {
+				opacity: 1;
+			}
+		}
 	}
+
+	.day-name {
+		color: rgba(0,0,0,0.6);
+		text-shadow: 2px 2px 3px rgba(255,255,255,0.1);
+	}
+}
+
+.open-popup-link {
+	text-shadow: 2px 2px 3px rgba(255,255,255,0.1);olor:#fff;
+	font-size:11pt;
+	color:#fff;
+	text-decoration: none;
+	opacity: 0;
+	transition: all 0.35s ease-out;
+	position: relative;
+	left: 0px;
+	bottom: 5px;
 }
 
 #days-container {
@@ -75,11 +114,25 @@ $activity-width: 135px;
 }
 
 .time-hour {
-	background-color: red;
 	height: 40px;
-	border-top: dotted 1px black;
+	border-top: dotted 1px rgba(59, 59, 60, 0.21);
+	-webkit-transition: all 0.35s ease-out;
+	-moz-transition: all 0.35s ease-out;
+	transition: all 0.35s ease-out;
+
+	&:hover {
+		background-color: rgba(77, 144, 254, 0.15);
+
+		span {
+			color: $secondary-blue;
+			font-weight: bold;
+		}
+	}
 
 	span {
+		-webkit-transition: all 0.35s ease-out;
+		-moz-transition: all 0.35s ease-out;
+		transition: all 0.35s ease-out;
 		width: 20px;
 		display: inline-block;
 	}
@@ -93,6 +146,14 @@ $activity-width: 135px;
 	font-family: Roboto;
 	font-weight: 300;
 	color:#fff;
+	padding: 0px 5px 0px 5px;
+	-webkit-transition: all 0.35s ease-out;
+	-moz-transition: all 0.35s ease-out;
+	transition: all 0.35s ease-out;
+
+	&:hover{
+    	box-shadow:0 5px 6px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset
+	}
 }
 
 /* Popup */
@@ -116,6 +177,8 @@ $activity-width: 135px;
 	position:relative;
 	bottom:100%;
 	left:800px;
+	text-align: center;
+	background-color: $secondary-blue;
 
 	.controls {
 		box-shadow: initial;
@@ -132,13 +195,13 @@ $activity-width: 135px;
 		transition-duration: 0.5s;
 
 		&:hover {
-			border-bottom-color: #4D90FE;
+			border-bottom-color: $main-blue;
 		}
 	}
 
 	.controls:active, .controls:focus {
 		outline: none;
-		border-bottom-color: #4D90FE;
+		border-bottom-color: $main-blue;
 	}
 }
 
@@ -163,7 +226,7 @@ $activity-width: 135px;
 		transition-duration: 0.5s;
 
 		&:hover {
-			border-bottom-color: #4D90FE;
+			border-bottom-color: $main-blue;
 		}
 	}
 
@@ -249,7 +312,7 @@ $activity-width: 135px;
 		transition-duration: 0.5s;
 
 		&:hover {
-			border-bottom-color: #4D90FE;
+			border-bottom-color: $main-blue;
 		}
 	}
 
@@ -308,7 +371,7 @@ $activity-width: 135px;
 	cursor: pointer;
 	z-index: 1050;
 	color: #fff;
-	background-color: #4d90fe;
+	background-color: $main-blue;
 	margin-left: 12px;
 	padding: 5px 11px 0px 11px;
 	font-family: 'Roboto','sans-serif';
@@ -336,7 +399,7 @@ $activity-width: 135px;
 #activity-next-button {
 	cursor: pointer;
 	color: #fff;
-	background-color: #4d90fe;
+	background-color: $main-blue;
 	width: 80px;
 	height: 80px;
 	border-radius: 50px;
@@ -369,7 +432,7 @@ $activity-width: 135px;
 	width: 30%;
 
 	&:focus {
-		border-color: #4d90fe;
+		border-color: $main-blue;
 	}
 }
 
@@ -391,7 +454,7 @@ $activity-width: 135px;
 
 .button {
 	cursor: pointer;
-	background-color: #4d90fe;
+	background-color: $main-blue;
 	margin-left: 12px;
 	font-family: 'Roboto','sans-serif';
 	line-height: 22px;
@@ -408,7 +471,7 @@ $activity-width: 135px;
 	}
 
 	&.blue {
-		background-color: #4D90FE;
+		background-color: $main-blue;
 		background-image: -webkit-linear-gradient(top,$btn-gradient-blue-one, $btn-gradient-blue-two);
 		background-image: -moz-linear-gradient(top,$btn-gradient-blue-one,$btn-gradient-blue-two);
 		background-image: -ms-linear-gradient(top,$btn-gradient-blue-one,$btn-gradient-blue-two);
@@ -576,11 +639,11 @@ $activity-width: 135px;
 	}
 
 	.prev {
-		border-bottom: solid 1px #4D90FE !important;
+		border-bottom: solid 1px $main-blue !important;
 	}
 
 	.next {
-		border-top: solid 1px #4D90FE !important;
+		border-top: solid 1px $main-blue !important;
 	}
 
 }
@@ -650,7 +713,7 @@ span.select2-option-text {
 	transition-duration: 0.5s !important;
 
 	&:hover {
-		border-bottom-color: #4D90FE !important;
+		border-bottom-color: $main-blue !important;
 	}
 }
 
@@ -663,6 +726,12 @@ span.select2-option-text {
 	margin-top:5px !important;
 
 }
-/*#select2-popup-activity-icon-one-container .select2-selection__arrow b {
-		height: 40px !important;
-	}*/
+
+/* mCustomScroller */
+#mCSB_1_container {
+	padding-right: 0px;
+}
+
+#mCSB_1_container_wrapper {
+	margin-right: 0px;
+}
